pghoard X.X.X (unreleased)
==========================

* Support for PostgreSQL 10.1+
* Use fast checkpoints by default to make the start of backups faster.  Slow
  progress at the beginning of the backup has a tendency to confuse people.


pghoard 1.6.0 (2017-10-12)
==========================

* Support for PostgreSQL 10
* `local-tar` backups are now split to roughly 2 gigabyte chunks of
  plain-text files.  New basebackups now benefit from some parallelization,
  as up to 5 chunks may be uploaded in parallel while new backup chunks are
  being created.
* `pghoard_restore` can now download and extract chunked basebackups using
  all CPU cores of the machine assuming that the parallel download mechanism
  can deliver it chunks fast enough
* Alternative `pghoard_postgres_command` implementation in Go for faster
  startup times.  The time that the Python implementation takes to start
  limits WAL restore throughput quite a bit
* Remove support for pg_xlog_directory config variable, we now require
  pg_data_directory to be set in the config for the backup site. This is
  done in order to stop guessing and possibly getting the answer wrong
  for the real location of the data.
* Miscellaneous bug fixes

pghoard 1.5.0 (2017-06-07)
==========================

* New tool, `pghoard_archive_cleanup` to clean up any orphan WAL segments
  from the object store
* Basebackup `end-time` and `end-wal-segment` are now stored in metadata and
  used for PITR when `local-tar` basebackups are used
* Azure object storage updated to work with the latest python-azure-storage
  module and promoted to production ready status
* Google object storage driver now retries operations on failure to work
  around transient connection reset and backend failure issues
* Google object storage compatibility with Google oauth2client version 1.5+
* S3 driver now supports server side encryption
* Swift driver now supports the region_name configuration option